<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.craigjmart.imagefinder.app.ImageFilterActivity"
    tools:ignore="MergeRootFrame" >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/advanced_filters"
        android:id="@+id/tvTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_size"
        android:id="@+id/tvImageSize"
        android:layout_below="@+id/tvTitle"
        android:layout_alignLeft="@+id/tvTitle"
        android:layout_alignStart="@+id/tvTitle"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_color"
        android:id="@+id/tvImageColor"
        android:layout_below="@+id/tvImageSize"
        android:layout_alignLeft="@+id/tvTitle"
        android:layout_alignStart="@+id/tvTitle"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_type"
        android:id="@+id/tvImageType"
        android:layout_below="@+id/tvImageColor"
        android:layout_alignLeft="@+id/tvTitle"
        android:layout_alignStart="@+id/tvTitle"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_site"
        android:id="@+id/tvImageSite"
        android:layout_below="@+id/tvImageType"
        android:layout_alignLeft="@+id/tvTitle"
        android:layout_alignStart="@+id/tvTitle"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etImageSite"
        android:layout_below="@+id/tvImageSite"
        android:layout_alignLeft="@+id/tvImageSite"
        android:layout_alignStart="@+id/tvImageSite"
        android:layout_toEndOf="@id/tvImageSite"
        android:hint="@string/hint_site"
        android:layout_alignRight="@+id/spinner"
        android:layout_alignEnd="@+id/spinner">

        <requestFocus />
    </EditText>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spSize"
        android:prompt="@string/size_pick"
        android:entries="@array/size_array"
        android:layout_alignBaseline="@+id/tvImageSize"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@+id/tvImageColor"
        android:layout_marginLeft="50dp"
        android:layout_alignParentRight="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spColor"
        android:entries="@array/color_array"
        android:layout_alignBaseline="@+id/tvImageColor"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/spSize" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spType"
        android:entries="@array/type_array"
        android:layout_alignBaseline="@+id/tvImageType"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/spColor" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_filters"
        android:id="@+id/btSave"
        android:layout_below="@+id/etImageSite"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:onClick="onSavePressed"/>
</RelativeLayout>
